[package]
name = "sea-orm-rocket"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>", "Jeb Rosen <jeb@jebrosen.com>"]
description = "SeaORM Rocket support crate"
repository = "https://github.com/SeaQL/sea-orm"
readme = "../README.md"
keywords = ["rocket", "framework", "database", "pools"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [
    "json",
] }
sea-orm = { version = "^0.3", features = [
    "macros", "runtime-tokio-native-tls"
] }

[dev-dependencies]
rocket = { version = "0.5.0-rc.1", features = [
    "json",
] }

[dependencies.sea-orm-rocket-codegen]
path = "../codegen"
version = "0.1.0-rc"


